<resources>
    <string name="app_name">MPPProLibrary</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email/Account Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <string name="error_login_fail">UserName not exists or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_down">Done</string>
    <string name="action_save">Save</string>
    <string name="action_submit">Submit</string>

    <string name="txt_input_book_isbn">Input ISBN</string>
    <string name="txt_input_member_id_hint">Input memberId</string>
    <string name="btn_search">Search</string>
    <string name="btn_add_member">Add</string>
    <string name="btn_add_author">Save Author</string>
    <string name="btn_add_author_label">Add</string>
    <string name="btn_add_book_label">Add This Book To Library</string>
    <string name="btn_add_copy_book">Add One Copy</string>

    <string name="action_add_member">Add New Member</string>
    <string name="action_add_member_short">Add Member</string>
    <string name="action_add_book">Add New Book</string>
    <string name="action_add_book_short">Add Book</string>
    <string name="action_add_author">Add One Author</string>
    <string name="action_add_author_short">Add Author</string>

    <!--- add member form labels -->
    <string name="str_member_id">Member ID:</string>
    <string name="str_member_firstname">FirstName:</string>
    <string name="str_member_lastname">LastName:</string>
    <string name="str_member_phone">Phone:</string>

    <string name="str_address_street">Street:</string>
    <string name="str_address_city">City:</string>
    <string name="str_address_state">State:</string>
    <string name="str_address_zip">ZIP:</string>

    <string name="str_book_title">Title:</string>
    <string name="str_book_isbn">ISBN:</string>
    <string name="str_book_available">Is available</string>
    <string name="str_book_copy_num">Copy Numbers:</string>
    
    <string name="str_book_rent_set">Maximum checkout length:</string>
    <string name="str_book_rent_long">21 days</string>
    <string name="str_book_rent_short">7 days</string>

    <string name="str_book_authors_label">Authors:</string>

    <string name="str_author_firstname">FirstName:</string>
    <string name="str_author_lastname">LastName:</string>
    <string name="str_author_phone">Phone:</string>
    <string name="str_author_credentials">Credentials:</string>
    <string name="str_author_shortbio">Short Bio:</string>

    <!-- tips -->
    <string name="str_tip_not_found_member">Can\'t found any member by this Id</string>
    <string name="str_tip_not_found_book">No book found by this isbn</string>
    <string name="str_tip_book_un_available">There is no copy left for this book</string>

    <string name="str_tip_checkout_success">Checkout book successfully!</string>
    <string name="str_tip_add_member_success">Add One Member Successfully!</string>
    <string name="str_tip_edit_member_success">Edit Successfully!</string>
    <string name="str_tip_add_book_success">Add One Book Successfully!</string>
    <string name="str_tip_add_author_success">Add One Author Successfully!</string>
    <string name="str_tip_add_copy_success">Add One Copy Successfully!</string>

    <string name="str_dialog_msg">Are you sure to logout ?</string>
    <string name="str_dialog_ok_btn">OK</string>
    <string name="str_dialog_cancel_btn">Cancel</string>
</resources>
