<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_book_title"
            android:imeActionId="@+id/bt_add"
            android:imeActionLabel="@string/action_add_book_short"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_book_isbn"
            android:imeActionId="@+id/bt_add"
            android:imeActionLabel="@string/action_add_book_short"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/et_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/str_book_available"
            android:imeActionId="@+id/bt_add"
            android:imeActionLabel="@string/action_add_book_short"
            android:imeOptions="actionUnspecified"
            android:checked="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_book_rent_set"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <RadioGroup
            android:id="@+id/rg_rent_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:imeActionId="@+id/bt_add"
            android:imeActionLabel="@string/action_add_book_short"
            android:imeOptions="actionUnspecified">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:id="@+id/rb_rent_long"
                android:text="@string/str_book_rent_long"
                android:checked="true" />

            <RadioButton
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_rent_short"
                android:text="@string/str_book_rent_short" />
        </RadioGroup>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_copyNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_book_copy_num"
            android:imeActionId="@+id/bt_add"
            android:imeActionLabel="@string/action_add_book_short"
            android:imeOptions="actionUnspecified"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/lightgrey" />
    </android.support.design.widget.TextInputEditText>

    <RelativeLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_book_authors_label"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="left|center_vertical"
            android:textSize="22sp"
            android:layout_alignParentLeft="true"
            />

        <Button
            android:id="@+id/btn_add_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_author_label"
            android:layout_alignParentRight="true"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_authors"
            android:layout_below="@+id/btn_add_author"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_add_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_book_label"
        android:layout_alignParentRight="true" />

</LinearLayout>