<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_book_isbn"
            android:layout_margin="15dp"
            android:layout_marginLeft="0dp"
            android:layout_width="200dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_book_isbn" />

        <Button
            android:id="@+id/bt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_search"
            android:layout_toRightOf="@+id/et_book_isbn"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_book_detail"
        android:layout_below="@+id/layout_book_search"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_book_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_book_isbn"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tv_book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_book_author"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_book_title" />

        <TextView
            android:id="@+id/tv_book_copyNum"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_book_author" />

        <Button
            android:id="@+id/btn_add_copy"
            android:layout_below="@+id/tv_book_copyNum"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_copy_book"/>
    </RelativeLayout>
</LinearLayout>